tests/NormalTests/paczka2/big_fuzzy/95176493.err
Error in line 4: NZiqYk50 A878 87,7
Error in line 10: 7eqe0H6z2Jj S371 67,5
Error in line 12: UsDyw S371 62,5
Error in line 30: UsDyw A415 65,6
Error in line 2: A878 A878 3,0
Error in line 41: 7eqe0H z2Jj S 47 1  ,0
Error in line 25: 4cgLe8cW S371 40,8
Error in line 43: NZiqYk50 A878 78,9
Error in line 36: 7eqe0H6z2Jj S647 33,4
Error in line 38: A878 S371 214,5
Error in line 60: 4cgLe8cW A878 63,1
Error in line 86: 5iN9SM5gDMp A415 -1,6
Error in line 89: A878 S647 80,3
Error in line 90: A878 A415 97,6
Error in line 87: 7eqe0H6z2Jj S647 17,9
Error in line 101: UsDyw A878 117,7
Error in line 96: A878 S371 55,9
Error in line 116: jdt A415 37,96
Error in line 114: NZiqYk50 A415 67,7
Error in line 83: 5iN9SM5gDMp A415 17,8
Error in line 133: 5iN9SM5gDMp S371 67,0
Error in line 115: jdt A415 45,3
Error in line 130: 7eqe0H6z2Jj S371 46,5
Error in line 136: jdt S647 28,9
Error in line 131: A878 S371 5,4
Error in line 147: UsDyw A415 15,5
Error in line 152: UsDyw S371 84,8
Error in line 169: NZiqYk50 S371 51,6
Error in line 174: jdt S371 14,2
Error in line 185: jdt S371 20,1
Error in line 186: jdt A878 14,6
Error in line 193: 5iN9SM5gDMp A878 23,8
Error in line 204: 7eqe0H6z2Jj A878 13,8
Error in line 203: 5iN9SM5gDMp A415 20,8
Error in line 223: 5iN9SM5gDMp A878 30,2
Error in line 221: UsDyw A415 1,7
Error in line 230: NZiqYk50 S647 21,7
Error in line 231: NZiqYk50 A415 51,9
Error in line 224: 4cgLe8cW S647 19,1
Error in line 233: 7eqe0H6z2Jj A878 11,0
Error in line 240: ÷iN9SM÷gDMp S371 29,6
Error in line 247: NZiqYk50 A878 E0,9
